...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31"
        tools:textColor="?attr/colorPrimary" />

    <Button
        android:id="@+id/button"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="268dp"
        android:layout_height="138dp"
        android:layout_marginTop="24dp"
        android:onClick="click"
        android:shadowRadius="10"
        android:text="Rozpocznij!"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
...
